--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,8 @@ android {
     defaultConfig {
         applicationId "com.template.young"
         minSdkVersion 29
-        targetSdkVersion 29
+        //noinspection ExpiredTargetSdkVersion
+        targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
